--- a/new-styles.css
+++ b/new-styles.css
@@ -98,7 +98,7 @@
 
 .hero-body {
   width: 100%;
-  height: 530px;
+  height: 100vh;
   border: 2px solid red;
   display: flex;
   justify-content: center;
