--- a/styles.css
+++ b/styles.css
@@ -6,27 +6,29 @@
 
 #main {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   /* border: 5px solid red; */
   font-family: Arial, Helvetica, sans-serif;
 }
 
 #main-container {
   width: 100%;
-  /* height: 100vh; */
+  height: 100%;
   background-color: black;
   color: white;
   /* padding: 0px 2em; */
 }
 
 .hero {
+  position: relative;
   width: 100%;
   height: 100vh;
   /* background-color: green; */
   color: white;
-  background: url(./assets/banner2.jpg);
+  background: url(./assets/banner.jpg);
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   /* z-index: 1000; */
 }
 
@@ -44,8 +46,8 @@
 .hero::after {
   content: "";
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: -0px;
+  left: 0;
   width: 100%;
   height: 50%;
   z-index: 10;
@@ -129,7 +131,7 @@
 
 .hero-body {
   width: 100%;
-  height: 100%;
+  min-height:100vh;
   /* border: 2px solid red; */
   display: flex;
   justify-content: center;
