--- a/styles.css
+++ b/styles.css
@@ -242,7 +242,7 @@ p {
   width: 100%;
   height: 100%;
   /* border: 2px solid green; */
-  padding: 0px 1em;
+  padding: 0px 0px 0px 2em ;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -323,8 +323,9 @@ p {
 }
 
 .card-2-outer-img {
-  min-width: 640px;
-  height: 480px;
+  min-width: 700px;
+  height: 520px;
+
 }
 
 .card-2-outer-img>img {
@@ -382,6 +383,36 @@ p {
 
 
 .card-2-right-desc {
+  width: 90%;
+  height: 100%;
+  /* border: 2px solid green; */
+  padding: 0px 2em 0px 0px  ;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align: left;
+  gap: 20px;
+}
+
+.card-3-container {
+  width: 100%;
+  height: 100%;
+  padding: 3em 2em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-3-left {
+  width: 55%;
+  height: 100%;
+  /* border: 2px solid blue; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-3-left-desc {
   width: 100%;
   height: 100%;
   /* border: 2px solid green; */
@@ -393,6 +424,41 @@ p {
   gap: 20px;
 }
 
+
+.card-3-right {
+  width: 45%;
+  height: 100%;
+  /* border: 2px solid blue; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-3-right-container {
+  position: relative;
+  min-width: 700px;
+  height: 526px;
+  padding: 0px 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid yellow; */
+}
+
+.card-3-right-container>img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+.card-3-right-container>video {
+  position: absolute;
+  top: 8%;
+  left: 18.5%;
+  width: 60%;
+  z-index: 1;
+}
 
 ::-webkit-scrollbar{
   display: none;
