--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,7 @@ p {
 .style-card {
   width: 100%;
   background-color: black;
-  border-top: 8px solid rgb(34, 34, 34);
+  border-top: 8px solid #222222;
   padding: 50px 50px;
   color: #fff;
 }
@@ -271,8 +271,8 @@ p {
 
 .card-1-right-container {
   position: relative;
-  min-width: 640px;
-  height: 480px;
+  min-width: 700px;
+  height: 520px;
   padding: 0px 1em;
   display: flex;
   justify-content: center;
@@ -458,6 +458,180 @@ p {
   left: 18.5%;
   width: 60%;
   z-index: 1;
+}
+
+.card-4-container {
+  width: 100%;
+  height: 100%;
+  padding: 3em 2em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-4-left {
+  width: 45%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid blue; */
+}
+
+.card-4-left-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-4-img {
+  min-width: 700px;
+  height: 520px;
+}
+
+.card-4-outer-img>img {
+  width: 100%;
+  height: 100%;
+}
+
+
+.card-4-right {
+  width: 55%;
+  height: 100%;
+  /* border: 2px solid blue; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.card-4-right-desc {
+  width: 90%;
+  height: 100%;
+  /* border: 2px solid green; */
+  padding: 0px 2em 0px 0px  ;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align: left;
+  gap: 20px;
+}
+
+.faq-section{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 50px;
+  border-top: 8px solid #222222;
+}
+
+.faq-container {
+  width: 100%;
+  height: 100%;
+  padding: 3em 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.faq-heading{
+  font-size: 2em;
+  margin-bottom: 1em;
+}
+
+.faq-body{
+  width: 100%;
+  height: 100%;
+  border: 2px solid blueviolet;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.faq-body-container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3em 2em;
+  gap: 1em;
+
+}
+
+.faq{
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.question{
+  width: 100%;
+  height: 80px;
+  background-color: #2d2d2d;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px ;
+  margin-bottom: 10px;
+}
+
+.question:hover{
+    background-color: #545454;
+}
+
+.faq.active .question span{
+  transform: rotate(45deg);
+  transition: all .5s ease-in-out;
+}
+
+
+.question , .answer{
+  font-size: 1.2em;
+}
+
+.answer{
+  position: relative;
+  background-color: #2d2d2d;
+  width: 100%;
+  max-height: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  overflow: hidden;
+
+}
+
+.faq.active .answer{
+  display: block;
+  max-height: 300px;
+  padding: 10px 20px;
+  transition: all .5s ease-in-out;
+
+}
+
+
+.question span.material-symbols-outlined {
+  font-size: 32px;
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 40
 }
 
 ::-webkit-scrollbar{
