--- a/styles.css
+++ b/styles.css
@@ -492,7 +492,7 @@ p {
   height: 520px;
 }
 
-.card-4-outer-img>img {
+.card-4-img>img {
   width: 100%;
   height: 100%;
 }
@@ -549,7 +549,7 @@ p {
 .faq-body{
   width: 100%;
   height: 100%;
-  border: 2px solid blueviolet;
+  /* border: 2px solid blueviolet; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -563,7 +563,7 @@ p {
   justify-content: center;
   align-items: center;
   padding: 3em 2em;
-  gap: 1em;
+  /* gap: 10px; */
 
 }
 
@@ -598,30 +598,47 @@ p {
   transition: all .5s ease-in-out;
 }
 
+.faq .question span{
+  transform: rotate(0deg);
+  transition: all .5s ease-in-out;
+}
 
 .question , .answer{
   font-size: 1.2em;
+  text-align: left;
+  max-width: 1200px;
+
 }
 
 .answer{
   position: relative;
   background-color: #2d2d2d;
   width: 100%;
-  max-height: 0px;
-  display: flex;
+  height: 0%;
+  top: -10px;
+  border-top: 1px solid black;
+  /* max-height: 0px; */
+  display: none;
+  /* display: flex; */
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  overflow: hidden;
+  /* overflow: hidden; */
+  transition: all .5s ease-in-out;
+
 
 }
 
 .faq.active .answer{
   display: block;
-  max-height: 300px;
+  height: 100%;
+  /* max-height: 300px; */
   padding: 10px 20px;
-  transition: all .5s ease-in-out;
 
+}
+
+.faq.active .question .answer{
+  transition: all .5s ease-in-out;
 }
 
 
@@ -632,6 +649,44 @@ p {
   'wght' 400,
   'GRAD' 0,
   'opsz' 40
+}
+
+.footer-cta{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px ;
+}
+
+.footer-cta-container{
+  width: 100%;
+  max-width: 700px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+footer{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 50px 50px ;
+  margin: auto;
+  border: 2px solid blue;
+}
+
+.footer-container{
+  width: 100%;
+  max-width: 1200px;
+  height: 100%;
+  padding: 2em 3em;
+  border: 2px solid green;
 }
 
 ::-webkit-scrollbar{
