--- a/styles.css
+++ b/styles.css
@@ -290,7 +290,7 @@ p {
 .card-1-right-container>video {
   position: absolute;
   top: 21%;
-  left: 14.5%;
+  left: 14.59%;
   width: 70%;
   z-index: 1;
 }
@@ -685,8 +685,63 @@ footer{
   width: 100%;
   max-width: 1200px;
   height: 100%;
-  padding: 2em 3em;
+  padding: 2em 2em;
   border: 2px solid green;
+}
+
+.help{
+  font-size: 1em;
+  color: #8a8a8a;
+}
+
+.help a{
+  /* text-decoration: none; */
+  color: #8a8a8a;
+  cursor: pointer;
+
+}
+
+.footer-nav{
+  width: 100%;
+  height: 100%;
+  padding: 2em 0em;
+  border: 2px solid blue;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-nav-container{
+  width: 100%;
+  height: 100%;
+  border: 1px solid white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.footer-nav-1{
+  max-width: 300px;
+  height: 100%;
+  border: 1px solid blue;
+}
+
+.footer-nav-1-list{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style-type: none;
+}
+
+.footer-nav-1-list a{
+  /* text-decoration: none; */
+  color: #8a8a8a;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 0.9em;
 }
 
 ::-webkit-scrollbar{
