--- a/responsive.css
+++ b/responsive.css
@@ -251,6 +251,14 @@
         text-align: left;
 
     }
+
+    footer{
+        padding: 20px 30px;
+    }
+
+    .footer-container{
+        padding: 50px 0px;
+    }
 }
 
 /* mini tablets */
